--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.18.2",
+    "axios": "^0.27.2",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -37,6 +38,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.1.0",
     "moment": "^2.29.3",
     "multer": "^1.4.5-lts.1",
@@ -53,6 +55,7 @@
     "@types/command-line-commands": "^2.0.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^9.1.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.40",
