Add swagger documentation

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,8 @@ POSTGRES_USER=db_user
 POSTGRES_PASSWORD=db_password
 POSTGRES_HOST=db_host
 POSTGRES_PORT=db_port
-POSTGRES_SSL=db_ssl
+POSTGRES_SSL=false
+EXCHANGE_RATE_API_HOST=https://v6.exchangerate-api.com/v6
+EXCHANGE_RATE_API_KEY=b8e937407132b48b04c4a53e
+TRANSFER_LIMIT=1000000
+JWT_SECRET=insecure-key
