--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.18.2",
+    "@types/swagger-ui-express": "^4.1.3",
     "axios": "^0.27.2",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -47,6 +48,7 @@
     "pino": "^8.0.0",
     "pino-pretty": "^8.0.0",
     "semver": "^7.3.7",
+    "swagger-ui-express": "^4.4.0",
     "ts-money": "^0.4.7",
     "uuid": "^8.3.2"
   },
